--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ funding = "https://sosse.io/fr/contact/"
 [tool.setuptools]
 packages = [
   "se",
+  "se.deps.linkpreview",
+  "se.deps.linkpreview.linkpreview",
+  "se.deps.linkpreview.linkpreview.preview",
   "se.deps.fake-useragent",
   "se.deps.fake-useragent.src",
   "se.deps.fake-useragent.src.fake_useragent",
